--- a/Day1-DataVizualization/notebook.ipynb
+++ b/Day1-DataVizualization/notebook.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color:skyblue\" >Part 1: Listing basic visualization methods</h1>"
+    "<h1 style=\"color:skyblue\" >Some basic visualization methods:</h1>"
    ]
   },
   {
